fixing some alignment issues, adding a background

--- a/style.css
+++ b/style.css
@@ -1071,6 +1071,8 @@ input[type="search"]:focus {
 
 .content-wrap {
 	max-height: 901px;
+	margin-top: 15px;
+	border-top: 1px solid #f6ca1d;
 	/*overflow: hidden;*/
 }
 
@@ -1129,19 +1131,31 @@ input[type="search"]:focus {
 }
 
 .left-column {
-	height: 880px;
-	padding: 1px 0 10px 1.3em;
-	margin-right: -10px;
+	height: 888px;
+	padding: 0;
+	margin-right: -12px;
 	line-height: 1.2em;
-	position: relative;
+	/*position: relative;*/
 
+	background-image: url(images/left-column-background.png);
+	background-position: bottom;
+	background-repeat: no-repeat;
+	
 	-webkit-box-shadow: inset 0 0 129px 74px rgba(175,176,176,0.9);
 	-moz-box-shadow: inset 0 0 129px 74px rgba(175,176,176,0.9);
 	box-shadow: inset 0 0 129px 74px rgba(175,176,176,0.9);
 }
 
+.panel {
+	width: 100%;
+}
+
+.panel-heading {
+	background: #1d3f78 !important;
+}
+
 .left-column h3 {
-	color: #1c3d74;
+	color: #ffffff;
 	font-size: 1.5em;
 	font-weight: 900;
 	/*padding: 0;*/
@@ -1165,15 +1179,23 @@ input[type="search"]:focus {
     padding-right: 7px;
 }
 
+.left-column a {
+	color: #000000;
+}
+
 .left-column .get-the-report {
 	/*padding: 2em;*/
 	/*margin-left: 15%;*/
-	position: absolute;
+	/*position: absolute;*/
 	bottom: 100px;
 	left: 30%;
 }
 
 /** RIGHT COLUMN **/
+.right-column {
+	padding-left: 0 !important;
+}
+
 .content-main,
 .home-bio,
 .testimonials,
